# create-idea-module

./: Cargo.toml  README.md
src/: config.rs  main.rs
templates/: modules.xml
